Revert "center align fixed"
This reverts commit 3a4ff6b3b758370a7c8c5262a7b3514376643110.

--- a/css/css.css
+++ b/css/css.css
@@ -10,11 +10,9 @@ body {
     background-color: #221919;
     position: fixed;
     overflow: hidden;
-    margin: auto;
-    width: 100%;
 
 }
-.container {
+.mainwrapper {
   width: 100vw;
   height: 100vh;
   overflow-y: scroll;
@@ -137,14 +135,11 @@ body {
 @media (min-width: 768px) {
     .container {
         max-width: 730px;
-        
-        
     }
 }
 
 .container-narrow > hr {
     margin: 30px 0;
-    
 }
 
 
@@ -152,7 +147,6 @@ body {
 
 .jumbotron {
     text-align: center;
-    
     /*border-bottom: 1px solid #e5e5e5;*/
     background: none;
 }
